--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "decks",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple card deck app for playing TOKYO-NIGHTMARE.",
+  "homepage": "https://github.com/hideishi-m/decks",
   "main": "index.cjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.cjs"
   },
-  "author": "",
+  "author": "Hidenori ISHIKAWA",
+  "files": [
+    "*.cjs",
+    "public/**/*.html",
+    "public/**/*.js",
+    "public/**/*.svg"
+  ],
   "license": "BSD-3-Clause",
   "config": {
     "port": "8080",
