--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -4,7 +4,6 @@
     "jquery": true
   },
   "globals": {
-    "bootstrap": "readonly",
-    "utils": "readonly"
+    "bootstrap": "readonly"
   }
 }
