--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "debug": "^4.3.3",
     "express": "^4.17.2",
+    "geoip-lite": "^1.4.3",
     "svg-cards": "^4.0.0",
     "ws": "^8.4.2"
   },
