--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   ],
   "license": "BSD-3-Clause",
   "config": {
-    "ip": "0.0.0.0",
+    "ip": "127.0.0.1",
     "port": "8080",
     "timeout": "3000"
   },
   "dependencies": {
     "debug": "^4.3.3",
     "express": "^4.17.2",
-    "geoip-lite": "^1.4.3",
+    "proxy-addr": "^2.0.7",
     "svg-cards": "^4.0.0",
     "ws": "^8.4.2"
   },
