Mod: fix eslint

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Simple card deck app for playing TOKYO-NIGHTMARE.",
   "homepage": "https://github.com/hideishi-m/decks",
-  "main": "index.cjs",
+  "main": "index.mjs",
   "type": "module",
   "scripts": {
     "start": "node index.mjs",
