--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "proxy-addr": "^2.0.7",
+    "serve-static": "^1.16.2",
     "svg-cards": "^4.0.0",
     "ws": "^8.4.2"
   },
