Mod: add dotenv, move environment variables to .env.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     }
   },
   "scripts": {
-    "start": "NODE_ENV=production DEBUG_DEPTH=null node index.mjs",
+    "start": "node index.mjs",
     "redocly": "node node_modules/.bin/redocly build-docs swagger.yaml -o public/spec.html"
   },
   "author": "Hidenori ISHIKAWA",
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "debug": "^4.3.3",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
