--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "ws": "^8.4.2"
   },
   "devDependencies": {
-    "@redocly/cli": "^1.4.0"
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "@redocly/cli": "^1.4.0",
+    "globals": "^15.11.0"
   }
 }
