--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.17.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "proxy-addr": "^2.0.7",
     "svg-cards": "^4.0.0",
     "ws": "^8.4.2"
