--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "config": {
     "ip": "127.0.0.1",
     "port": "8080",
-    "timeout": "3000"
+    "timeout": 3000
   },
   "dependencies": {
     "debug": "^4.3.3",
