--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   "license": "BSD-3-Clause",
   "config": {
     "ip": "127.0.0.1",
-    "port": "8080",
-    "timeout": 3000
+    "port": "8080"
   },
   "dependencies": {
     "debug": "^4.3.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^17.1.0",
     "express": "^4.17.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -39,9 +38,8 @@
     "ws": "^8.4.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@redocly/cli": "^1.4.0",
-    "globals": "^15.11.0"
+    "globals": "^16.0.0"
   }
 }
